2005-12-18  Ahmon Dancy  <dancy@dancy>
1.1.41
	
	* Makefile: Build using latest 8.0.

	* config.cl: New parameter *queue-max-threads* (default 20).
	Determines the maximum number of parallel threads to use during
	automatic queue processing.  This improves the flow of queued mail
	on hosts that run mailing lists (such as pandorabots).

	* queue-process.cl: Make use of new *queue-max-threads*.

2005-11-29  Ahmon Dancy  <dancy@dancy>
1.1.40
	* greylist.cl: Fixed argument list for greylist-rcpt-to-checker.
	It was out of date.

2005-11-28  Ahmon Dancy  <dancy@dancy>
1.1.39
	
	* aliases.cl:  recip-expanded-from wasn't being set properly and
	was causing unhandled errors in the bounce code.  Fixed.

	* config.cl:  Added a comment on the use of *short-host-name*. 

2005-10-26  root  <root@gills.dancysoft.com>
1.1.38


	* Makefile: Changed alt_lisp1 to /storage1/acl80b/mlisp

	* utils.cl: New get-line function.
	
	* deliver.cl: When delivering to a file, escape "From " lines.

2005-10-11  Ahmon Dancy  <dancy@dancy>
1.1.37 

	* Makefile: Fixed 'arch' variable (x86 should have been 86).
	Parameterized the preferred build lisp.  Use the same lisp to
	build greyadmin.

	* version.cl.  Bumped to 1.1.37 to indicate 8.0.beta build.  Added
	an Id tag.

2005-10-10  Kevin Layer  <layer@relay.known.net>

	* Makefile: default to `mlisp'; all does clean first
	* lock.cl: use mp:process-sleep instead of sleep, since 8.0's
	  definition changed to not allow the `whostate' optional.

2005-09-23  Ahmon Dancy  <dancy@dancy>
1.1.36
	
	* maild.cl: Log when maild is terminated via signal.

	* auth.cl: Adding to repository (late).

2005-09-22  Ahmon Dancy  <dancy@dancy>
1.1.35
	
	* Fix client authentication sanity check in maild.cl

2005-09-21  Ahmon Dancy  <dancy@dancy>
1.1.34

	* Added support for client authentication using plain-text
	mechanisms (which allow for the standard password database
	mechanisms to be used).  By default, ssl is required before